--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,16 +1,11 @@
 <resources>
     <string name="app_name">LearnIT</string>
-
-    <!-- Strings related to login -->
-    <string name="prompt_email">Email</string>
-    <string name="prompt_password">Password (optional)</string>
-    <string name="action_sign_in">Sign in or register</string>
-    <string name="action_sign_in_short">Sign in</string>
-    <string name="error_invalid_email">This email address is invalid</string>
-    <string name="error_invalid_password">This password is too short</string>
-    <string name="error_incorrect_password">This password is incorrect</string>
-    <string name="error_field_required">This field is required</string>
-    <string name="permission_rationale">"Contacts permissions are needed for providing email
-        completions."
-    </string>
+   <string name="bem_vindo">Bem vindo ao Learn IT</string>
+    <string name="login">Login</string>
+    <string name="Password">Password</string>
+    <string name="Entrar">Entrar</string>
+    <string name="cadastrar">Novo aqui? Cadastre-se</string>
+    <string name="cadastrarButton">Cadastrar</string>
+    <string name="esqueceu">Esqueceu sua senha? Clique aqui</string>
+    <string name="email">Email</string>
 </resources>
