--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="cadastrarButton">Cadastrar</string>
     <string name="esqueceu">Esqueceu sua senha? Clique aqui</string>
     <string name="email">Email</string>
+    <string name="cadastro">Cadastro</string>
 </resources>
