--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="avaliadores">avaliadores</string>
     <string name="horas">horas</string>
     <string name="rate">rate</string>
+    <string name="title_activity_main">MainActivity</string>
 </resources>
