--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,6 @@
     <string name="drawer_open">Open navigation drawer</string>
     <string name="drawer_close">Close navigation drawer</string>
     <string name="title_activity_side">SideActivity</string>
+    <string name="title_activity_navigation">NavigationActivity</string>
+    <string name="title_activity_drawer">DrawerActivity</string>
 </resources>
